tests/fixtures/invalid/none_rshift_dict.py
# Cannot right shift None and Dict[str, int]
x: None = None >> {"a": 1}
